# CHANGELOG

## v1.5.0 [UNRELEASED]

* Support for new features introduced in 7.14:
  * `gitlab_git_http_server` parameter

## v1.4.0 [2015-07-24]

* Added management of Gitlab secrets file `/etc/gitlab/gitlab-secrets.json`

## v1.3.0 [2015-07-17]

* Fixed bug with gitlab.rb.erb template for use with git_data_dir
* Updated erb template to accomodate for values being hashes
* Added check for external database
* Fixes for RedHat Repository URLs
* More spec tests
* Bump puppetlabs-apt module version requirement

Thanks to @robbruce for his contributions for this version!

## v1.2.2 [2015-07-07]

* Sort hash keys when writing gitlab.rb file. Thanks to @jrwesolo
* Simplify parameter logic and add new parameters
  for the gitlab service. Thanks to @jrwesolo

## v1.2.1 [2015-06-29]

* Explicit resource ordering to have apt_update executed
  before package installation

## v1.2.0 [2015-06-23]

* removed `rails` parameter because it was a duplicate
  of `gitlab_rails`. Thanks to @tdb
* Add high_availability config section. Thanks to @tdb

## v1.1.0 [2015-06-17]

* Support for RHEL 7
* Travis testing against Puppet 4
* Initial support for Puppet 4 (Tested on Travis)

## v1.0.3 [2015-06-16]

* Module is now located under the "vshn" namespace on forge. "vshnops" is
  being deprecated!

## v1.0.2 [2015-05-29]

* Correct URL to project page

## v1.0.1 [2015-05-29]

* Small correction to metadata.json

## v1.0.0 [2015-05-29]

* Initial release